app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: bankapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
