db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  clusterIP: None
  selector:
    app: dbapp
  ports:
    - port: 3306
      targetPort: 3306
